cart badge added, cart icon all time in screen, img product gallery overflow fixed

--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -1,10 +1,8 @@
 .product-card {
   height: 400px;
   width: 250px;
-  margin: 1.5rem auto;
   box-shadow: 0 0 5px #999;
   border-radius: 10px;
-  padding: 1rem;
   text-decoration: none;
 }
 
@@ -24,30 +22,4 @@
 .product-card-img {
   max-height: 200px;
   width: 100%;
-}
-
-.product-card-title {
-  font-weight: bold;
-  font-size: 1.25rem;
-}
-
-.product-card-price {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.product-card-rating {
-  font-weight: bold;
-}
-
-.product-card-addbtn {
-  box-shadow: 0 0 5px #999;
-}
-
-.product-card-discount-percentage {
-  font-style: italic;
-  font-weight: bold;
-  color: #9ECE6A;
-  text-shadow: 1px 1px 0 #000;
-  font-size: 1.5rem;
 }
